force-app/main/default/objects/WebshopMegaMenuItem__c/WebshopMegaMenuItem__c.object-meta.xml
<CustomObject>
    <label>Mega Menu Item</label>
    <nameField>
        <label>Mega Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mega Menu Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>