force-app/main/default/objects/WebshopMegaMenuItem__c/fields/BrandItem__c.field-meta.xml
<CustomField>
    <fullName>BrandItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Item</label>
    <type>Checkbox</type>
</CustomField>