force-app/main/default/objects/WebshopMegaMenuItem__c/fields/EnglishLabel__c.field-meta.xml
<CustomField>
    <fullName>EnglishLabel__c</fullName>
    <label>English Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>