force-app/main/default/objects/WebshopMegaMenuItem__c/fields/FeaturedAd__c.field-meta.xml
<CustomField>
    <fullName>FeaturedAd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Featured Ad. CRM-1091, recommended for second level mega menu items.</description>
    <label>Featured Ad</label>
    <referenceTo>WebshopFeaturedAd__c</referenceTo>
    <relationshipLabel>Mega Menu Items (Featured Ad)</relationshipLabel>
    <relationshipName>MegaMenuItems</relationshipName>
    <type>Lookup</type>
</CustomField>