force-app/main/default/objects/WebshopMegaMenuItem__c/fields/FeaturedItem__c.field-meta.xml
<CustomField>
    <fullName>FeaturedItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the item links to the Category:Featured page.</description>
    <label>Featured Item</label>
    <type>Checkbox</type>
</CustomField>