force-app/main/default/objects/WebshopMegaMenuItem__c/fields/FeaturedSubheader__c.field-meta.xml
<CustomField>
    <fullName>FeaturedSubheader__c</fullName>
    <label>Featured Subheader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>