force-app/main/default/objects/WebshopMegaMenuItem__c/fields/FeaturedSubheaderGerman__c.field-meta.xml
<CustomField>
    <fullName>FeaturedSubheaderGerman__c</fullName>
    <label>Featured Subheader German</label>
    <length>255</length>
    <type>Text</type>
</CustomField>