force-app/main/default/objects/WebshopMegaMenuItem__c/fields/GermanLabel__c.field-meta.xml
<CustomField>
    <fullName>GermanLabel__c</fullName>
    <label>German Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>