force-app/main/default/objects/WebshopMegaMenuItem__c/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <description>Vertical Hierarchy. CRM-1091</description>
    <label>Hierarchy</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>