force-app/main/default/objects/WebshopMegaMenuItem__c/fields/NeitherFeaturedNorNew__c.field-meta.xml
<CustomField>
    <fullName>NeitherFeaturedNorNew__c</fullName>
    <formula>FeaturedItem__c = FALSE &amp;&amp; NewItem__c = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Neither Featured Nor New</label>
    <type>Checkbox</type>
</CustomField>