force-app/main/default/objects/WebshopMegaMenuItem__c/fields/NewItem__c.field-meta.xml
<CustomField>
    <fullName>NewItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the item links to the Category:New page.</description>
    <label>New Item</label>
    <type>Checkbox</type>
</CustomField>