force-app/main/default/objects/WebshopMegaMenuItem__c/fields/ParentMegaMenu__c.field-meta.xml
<CustomField>
    <fullName>ParentMegaMenu__c</fullName>
    <label>Parent Mega Menu</label>
    <referenceTo>WebshopMegaMenu__c</referenceTo>
    <relationshipLabel>Mega Menu Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>