force-app/main/default/objects/WebshopMegaMenuItem__c/fields/ParentMegaMenuItem__c.field-meta.xml
<CustomField>
    <fullName>ParentMegaMenuItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Mega Menu Item</label>
    <referenceTo>WebshopMegaMenuItem__c</referenceTo>
    <relationshipLabel>Mega Menu Items</relationshipLabel>
    <relationshipName>MegaMenuItems</relationshipName>
    <type>Lookup</type>
</CustomField>