force-app/main/default/objects/WebshopMegaMenuItem__c/fields/Subheader__c.field-meta.xml
<CustomField>
    <fullName>Subheader__c</fullName>
    <description>Used for 2nd level</description>
    <inlineHelpText>Used for 2nd level</inlineHelpText>
    <label>Subheader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>