force-app/main/default/objects/WebshopMegaMenuItem__c/fields/SubheaderGerman__c.field-meta.xml
<CustomField>
    <fullName>SubheaderGerman__c</fullName>
    <label>Subheader German</label>
    <length>255</length>
    <type>Text</type>
</CustomField>