force-app/main/default/objects/WebshopMegaMenuItem__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Target of Mega Menu Item.</description>
    <label>Target</label>
    <type>Url</type>
</CustomField>