force-app/main/default/objects/WebshopMegaMenuItem__c/fields/ThirdLevelFeatured__c.field-meta.xml
<CustomField>
    <fullName>ThirdLevelFeatured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Featured Mega Menu Item on Third Level.</description>
    <label>Third Level Featured?</label>
    <type>Checkbox</type>
</CustomField>