force-app/main/default/objects/WebshopMegaMenuItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CategoryName__c</columns>
    <columns>NAME</columns>
    <columns>Hierarchy__c</columns>
    <columns>ParentMegaMenu__c</columns>
    <columns>ParentMegaMenuItem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>