force-app/main/default/objects/WebshopMegaMenuItem__c/listViews/HierarchyAndParent.listView-meta.xml
<ListView>
    <fullName>HierarchyAndParent</fullName>
    <columns>NAME</columns>
    <columns>Hierarchy__c</columns>
    <columns>ParentMegaMenuItem__c</columns>
    <filterScope>Everything</filterScope>
    <label>Hierarchy and Parent</label>
    <language>en_US</language>
</ListView>